Updating navbar appearance, fixing layout issues causing height over 100%

--- a/web/src/components/styles/NavigationBar.scss
+++ b/web/src/components/styles/NavigationBar.scss
@@ -1,25 +1,7 @@
-.NavigationBar {
-  padding-bottom: 0.1%;
-  border-bottom: 1px solid #bbb;
-}
-
-.navbar-nav {
-  flex-direction: row;
-}
-.navbar-nav .nav-item {
-  display: inline-block;
-  padding-right: 0;
-  padding-left: 10px;
-}
-.navbar-nav .UserImage {
-  display: inline-block;
-  max-width: 50px;
-  max-height: 50px;
-  width: auto;
-  height: auto;
+.navbar-nav img {
+  display: inline-flex;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-}
-.navbar-nav .UserName {
-  padding-top: 14px;
-  color: #000000;
+  margin: -10px 1em;
 }
