--- a/web/src/containers/styles/Layout.scss
+++ b/web/src/containers/styles/Layout.scss
@@ -1,10 +1,4 @@
 .LayoutContent {
-  position: absolute;
-  width: 100% !important;
-  height: 100% !important;
-}
-
-.MatchesList {
-  padding-top: 2px;
-  background-color: #fff;
+  width: 100%;
+  height: 100%;
 }
